--- a/Scribe/Base.lproj/Main.storyboard
+++ b/Scribe/Base.lproj/Main.storyboard
@@ -1,26 +1,107 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_0" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Scribe" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o2q-jj-Jl7">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCRIBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rkq-Dj-Tig">
+                                        <rect key="frame" x="125" y="31.5" width="71" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.89607626200000001" green="0.1992317438" blue="0.1396120787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="4VQ-8g-fNt"/>
+                                    <constraint firstItem="Rkq-Dj-Tig" firstAttribute="centerX" secondItem="o2q-jj-Jl7" secondAttribute="centerX" id="FnH-ch-kjk"/>
+                                    <constraint firstItem="Rkq-Dj-Tig" firstAttribute="centerY" secondItem="o2q-jj-Jl7" secondAttribute="centerY" constant="10" id="ilc-ks-jJ5"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="IA4-zQ-JFg">
+                                <rect key="frame" x="10" y="80" width="300" height="363"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d5Q-Y2-1Ma" customClass="CircularButton" customModule="Scribe" customModuleProvider="target">
+                                <rect key="frame" x="130" y="463" width="60" height="60"/>
+                                <color key="backgroundColor" red="0.89607626200000001" green="0.1992317438" blue="0.1396120787" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="Bov-sZ-JsP"/>
+                                    <constraint firstAttribute="width" constant="60" id="n6j-zp-Fbf"/>
+                                </constraints>
+                                <state key="normal">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="30"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="recordButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yi5-X5-nGf"/>
+                                </connections>
+                            </button>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="Kxk-hZ-fMN">
+                                <rect key="frame" x="130.5" y="463.5" width="60" height="60"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PLAY &amp; TRANSCRIBE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LiK-1p-P29">
+                                <rect key="frame" x="69" y="533" width="181" height="25"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="18"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="IA4-zQ-JFg" firstAttribute="top" secondItem="o2q-jj-Jl7" secondAttribute="bottom" constant="10" id="2pu-KS-oej"/>
+                            <constraint firstItem="Kxk-hZ-fMN" firstAttribute="width" secondItem="d5Q-Y2-1Ma" secondAttribute="width" id="3Yp-gf-XKw"/>
+                            <constraint firstItem="Kxk-hZ-fMN" firstAttribute="height" secondItem="d5Q-Y2-1Ma" secondAttribute="height" id="5gN-ql-aZn"/>
+                            <constraint firstItem="d5Q-Y2-1Ma" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="IET-ge-UNd"/>
+                            <constraint firstItem="LiK-1p-P29" firstAttribute="top" secondItem="d5Q-Y2-1Ma" secondAttribute="bottom" constant="10" id="LIK-Xg-hFv"/>
+                            <constraint firstItem="Kxk-hZ-fMN" firstAttribute="centerY" secondItem="d5Q-Y2-1Ma" secondAttribute="centerY" id="MsD-E1-Nos"/>
+                            <constraint firstItem="IA4-zQ-JFg" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="10" id="NXq-qg-NPZ"/>
+                            <constraint firstItem="d5Q-Y2-1Ma" firstAttribute="top" secondItem="IA4-zQ-JFg" secondAttribute="bottom" constant="20" id="Twg-AT-ozK"/>
+                            <constraint firstItem="o2q-jj-Jl7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dm7-3T-we7"/>
+                            <constraint firstAttribute="trailing" secondItem="IA4-zQ-JFg" secondAttribute="trailing" constant="10" id="ft1-tB-xE6"/>
+                            <constraint firstItem="LiK-1p-P29" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hKm-gU-tpx"/>
+                            <constraint firstAttribute="trailing" secondItem="o2q-jj-Jl7" secondAttribute="trailing" id="kiU-Iv-4aQ"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LiK-1p-P29" secondAttribute="bottom" constant="10" id="pHg-ci-2pn"/>
+                            <constraint firstItem="Kxk-hZ-fMN" firstAttribute="centerX" secondItem="d5Q-Y2-1Ma" secondAttribute="centerX" id="x0W-1X-iDr"/>
+                            <constraint firstItem="o2q-jj-Jl7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="xOH-5W-1fv"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="activitySpinner" destination="Kxk-hZ-fMN" id="2x4-lQ-Ikr"/>
+                        <outlet property="transcriptionTextField" destination="IA4-zQ-JFg" id="dVQ-Ts-EA8"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="41" y="120"/>
         </scene>
     </scenes>
 </document>
